LecturerMainPage and LecturerBooking

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Appointment System</string>
+    <!--id-->
+    <item type="id" name="appointmentID" />
+    <item type="id" name="appointmentStatus" />
+    <item type="id" name="scheduleID" />
 </resources>
